--- a/wikipedia.html
+++ b/wikipedia.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="HTML,CSS,java script" >
     <meta property="og:title" content="wikipedia" />
     <meta property="og:description" content="Easy to learn" />
-    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FHTML&psig=AOvVaw14HUk5hx78Wxe1y_U2Q3ss&ust=1747875594238000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJDy9ZCus40DFQAAAAAdAAAAABAE" />
+    <meta property="og:image" content="https://static.wikia.nocookie.net/htmlcss/images/c/ce/Wikipedia_Logo.png/revision/latest?cb=20101018003628" />
     <meta property="og:type" content="webpage" />
   <link rel="icon" href="./wiki.png">
   <title>Wikipedia HTML</title>
